<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Xplain.Matrix</string>
    <string name="eigen">Eigen</string>
    <string name="lin_sys">Linear system</string>
    <string name="solve">Solve</string>
    <string name="rank">Rank</string>
    <string name="invert">Inverse</string>
    <string name="multiply">Multiply</string>
    <string name="determinant">Determinant</string>
    <string name="bad_elements">Some elements\n are unsuitable</string>
    <string name="sing">singular</string>
    <string name="press_menu">press menu</string>
</resources>
